backend/k8s/ingress.yaml
# Ingress — routeur HTTP
# Prérequis : kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
#
# Ajouter dans /etc/hosts : 127.0.0.1  defizz.local
#
# Routes :
#   defizz.local/api/*      → backend:4000
#   defizz.local/health     → backend:4000
#   defizz.local/whoami     → backend:4000
#   defizz.local/crash      → backend:4000
#   defizz.local/*          → frontend:80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defizz-ingress
  namespace: defizz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: defizz.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /(health|whoami|crash)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 4000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
